[package]
name = "assert_cfg"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"
license = "Zlib"
description = "static assertions for crate features, with descriptive errors."
rust-version = "1.57"
readme="./README.md"
keywords = ["no-std"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/assert_cfg/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "./README.md",
    "./LICENSE-ZLIB.md", 
]


[features]
# used in tests
foo = []
bar = []
baz = []
__test = ["foo", "bar", "baz"]

[dependencies.const_panic]
version = "0.2.0"
default-features = false


[dev-dependencies]
trybuild = "1.0"



